[tool.poetry]
name = "pentestbox"
version = "0.1.0"
description = "Modular, automated penetration testing toolbox"
authors = ["PenTestBox Authors"]
license = "MIT"
readme = "README.md"
packages = [{include = "pentestbox"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
typer = {extras = ["all"], version = "^0.12.3"}
celery = "^5.3.6"
redis = "^5.0.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
cryptography = "^42.0.5"
minio = "^7.2.5"
PyPDF2 = "^3.0.1"
reportlab = "^4.0.4"
httpx = "^0.27.0"
pytest = "^8.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
pentestbox-cli = "pentestbox.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"